# F1-overwatch

./: .env.example  .gitignore  README.md  biome.json  commitlint.config.cjs  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/scripts/: validate_leaderboard.py  validate_strategy.py
apps/api/tests/: test_health.py  test_openf1_client.py  test_openf1_stints.py  test_optimal_strategy.py  test_race_data.py  test_strategy_sim.py  test_tyre_dataset.py  test_tyre_model.py  test_validation.py  test_validation_slow.py
apps/api/traceline/: __init__.py  config.py  main.py
apps/api/traceline/routes/: seasons.py  sessions.py  strategy.py
apps/api/traceline/schemas/: __init__.py  season.py  session.py  strategy.py
apps/api/traceline/services/: fastf1_loader.py  jolpi_client.py  leaderboard.py  openf1_client.py  openf1_loader.py  optimal_strategy.py  race_data.py  season_loader.py  strategy_sim.py  tyre_dataset.py  tyre_model.py  validation.py
apps/web/: next.config.mjs  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CircuitPicker.tsx  providers.tsx
apps/web/components/analytics/: DeltaTimeChart.tsx  GapOverRaceChart.tsx  QualiTelemetryPanel.tsx  (+2 more)
apps/web/lib/: api.ts  circuits.ts  season-data.ts  supabase.ts  teams.ts  track-paths.ts  use-cached-rounds.ts  use-race-results.ts  use-season.ts  utils.test.ts  utils.ts
apps/web/scripts/: build-track-paths.mjs
supabase/: README.md
supabase/migrations/: 0001_init.sql
(+31 files in other folders)
