[project]
name = "traceline-api"
version = "0.0.0"
description = "TraceLine FastAPI backend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "fastf1>=3.4.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scipy>=1.13.0",
  "redis>=5.2.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["traceline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# `slow` marks tests that hit FastF1 (1-3 min on cold cache). Skipped by
# default; run with `pytest -m slow` for the full P2 validation harness.
markers = [
  "slow: real-FastF1 integration tests (deselected by default)",
]
addopts = "-m 'not slow'"
